# Quick-Invoice

./: .eslintrc.cjs  .eslintrc.js  .gitignore  .prettierrc  APPROACH.md  CLAUDE.md  README.md  index.html  jest.config.js  package-lock.json  package.json  playwright.config.ts  requirements.md  tailwind.config.js  todo.md  tsconfig.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: build.yml
docs/: BUILD_GUIDE.md  DEPLOYMENT.md  DEVELOPMENT_SETUP.md
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  version.rs
src-tauri/src/database/: embedded_migrations.rs  embedded_tag_templates.rs  migration_001_add_piece_count.sql  migration_runner.rs  migration_trigger.rs  migrations.rs  mod.rs  schema.sql  seed.sql  version_manager.rs
src-tauri/src/database/migrations/: v001_email_config.sql  v001_initial_schema.sql  v002_gst_fixes.sql  v002_tag_settings.sql  v003_additional_indexes.sql  v003_email_config.sql
src-tauri/src/handlers/: customer_handler.rs  email_handler.rs  html_handler.rs  invoice_handler.rs  migration_handler.rs  mod.rs  pdf_handler.rs  pricing_handler.rs  report_handler.rs  service_handler.rs  store_handler.rs  tag_handler.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: email_service.rs  html_generator.rs  mod.rs  pdf_generator.rs  pricing_engine.rs  tag_generator.rs  template_engine.rs
src-tauri/src/templates/assets/: invoice_styles.css
src-tauri/src/templates/invoice/: invoice_template.html
src-tauri/src/templates/tags/: tag_32mm.html  tag_40mm.html  tag_50mm.html
src-tauri/src/utils/: mod.rs
src/components/: MigrationDialog.tsx
src/components/common/: DataTable.tsx  ErrorBoundary.tsx  Layout.tsx  LoadingSpinner.tsx  Modal.tsx  Navigation.tsx  NotificationCenter.tsx  SearchBar.tsx  Settings.tsx
src/components/customer/: CustomerForm.tsx  CustomerList.tsx
src/components/dashboard/: Dashboard.tsx  QuickStats.tsx  RecentActivity.tsx
src/components/invoice/: CustomerSelector.tsx  InvoiceForm.tsx  InvoiceHTMLPreview.tsx  InvoiceList.tsx  InvoiceSummary.tsx  PaymentSection.tsx  ServiceSelector.tsx  TagPrintButton.tsx
src/components/reports/: Reports.tsx
src/components/service/: ServiceForm.tsx  ServiceList.tsx
src/config/: app.config.ts
src/contexts/: AppContext.tsx
src/hooks/: useMigrationCheck.ts
src/styles/: globals.css
src/test/: setup.ts
src/types/: email.ts  index.ts
tests/e2e/: invoice-creation.spec.ts
tests/integration/: invoice-workflow.test.ts
tests/unit/: gst-calculation.test.ts  pricing-engine.test.ts
(+7 files in other folders)
